# ulight

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  HIGHLIGHT_INCORRECT_OUTPUT_SCAN.md  README.md
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: clang-format.yml  cmake-multi-platform.yml  pages.yml
docs/: incorrect-highlights.md
examples/: CMakeLists.txt  c_to_html.c  cpp_to_html.cpp
examples/modules/: CMakeLists.txt  modules_test.cpp
include/ulight/: README.md  function_ref.hpp  json.hpp  ulight.h  ulight.hpp
include/ulight/impl/: ascii_algorithm.hpp  ascii_chars.hpp  assert.hpp  bash.hpp  buffer.hpp  chars.hpp  charset.hpp  cpp.hpp  css.hpp  escapes.hpp  function_ref.hpp  highlight.hpp  highlighter.hpp  html.hpp  io.hpp  js.hpp  jsx.hpp  lua.hpp  memory.hpp  meta.hpp  mmml.hpp  nasm.hpp  numbers.hpp  parse_utils.hpp  platform.h  platform.hpp  releasable_vector.hpp  string_diff.hpp  strings.hpp  tty.hpp  unicode.hpp  unicode_algorithm.hpp  unicode_chars.hpp
scripts/: check-format.sh  check-tidy.sh  generate-commonmark-tests.cjs  highlight.js  theme-to-css.cjs  theme-to-css.js  themes-to-live-edit-css.sh
src/main/cpp/: bash.cpp  chars.cpp  cpp.cpp  css.cpp  html.cpp  io.cpp  js.cpp  lua.cpp  main.cpp  mmml.cpp  nasm.cpp  parse_utils.cpp  ulight.cpp  ulight.cppm  wasm.cpp
src/main/wasm/: README.md  f_i32_i32_i32_to_void.wasm  f_i32_i32_i32_to_void.wat
src/test/cpp/: main.cpp  test_buffer.cpp  test_chars_strings.cpp  test_cowel.cpp  test_cpp.cpp  test_css.cpp  test_function_ref.cpp  test_highlight.cpp  test_html.cpp  test_js.cpp  test_json.cpp  test_nasm.cpp  test_python.cpp  test_rust.cpp  test_string_diff.cpp  test_unicode.cpp  test_unicode_algorithm.cpp  test_xml.cpp
test/: comments.cpp  comments.cpp.html  comments.mmml.html  directives.cpp  directives.cpp.html  hello_world.cpp.html  hello_world.mmml.html  integers.cpp.html  utf32le.txt  variable.cpp.html
test/highlight/: c.c  c.c.html  cdata.html  character_literals.cpp  character_literals.cpp.html  character_reference.html.html  comments.css  comments.css.html  comments.html  comments.html.html  comments.lua  comments.lua.html  comments.mmml  comments.mmml.html  component.jsx  component.jsx.html  dark_theme.css  dark_theme.css.html  directives.cpp.html  double_quotes.sh.html  hello_world.cpp.html  hello_world.js  hello_world.js.html  hello_world.lua  hello_world.lua.html  hello_world.mmml.html  hello_world.sh.html  important.css  important.css.html  integers.cpp  integers.lua  integers.lua.html  js_in_jsx.jsx.html  leading_spaces.sh  leading_spaces.sh.html  nested_tags.jsx.html  options.sh.html  parameter_substitutions.sh.html  raw_strings.cpp  rules.css.html  (+12 more)
test/highlight/bash/: arithmetic.sh  arithmetic.sh.html  arithmetic_expansion.sh  arithmetic_expansion.sh.html  double_quotes.sh  double_quotes.sh.html  hello_world.sh.html  leading_spaces.sh.html  options.sh  options.sh.html  parameter_substitutions.sh  parameter_substitutions.sh.html  process_substitution.sh  process_substitution.sh.html  shell_substitutions.sh  shell_substitutions.sh.html  single_quote_strings.sh.html  special_parameters.sh  special_parameters.sh.html  subshell.sh  subshell.sh.html
test/highlight/c/: c.c  c.c.html  generic_selection.c  generic_selection.c.html  hex_upper_prefix.c  hex_upper_prefix.c.html  integers.c  integers.c.html
test/highlight/cowel/: arguments.cow  arguments.cow.html  binary_operator_comments.cow  binary_operator_comments.cow.html  binary_operators.cow  binary_operators.cow.html  binary_operators_munch.cow  binary_operators_munch.cow.html  block.cow  block.cow.html  brace_closed_arguments.cow  brace_closed_arguments.cow.html  brace_enclosed_square.cow  brace_enclosed_square.cow.html  comment_directives.cow  comment_directives.html  comments.cow  comments.cow.html  directive_names.cow  directive_names.cow.html  escapes.cow  escapes.cow.html  escapes_named.cow  escapes_named.cow.html  escapes_named_reserved.cow  escapes_named_reserved.cow.html  escapes_numeric.cow  escapes_numeric.cow.html  escapes_numeric_reserved.cow  escapes_numeric_reserved.cow.html  escapes_reserved.cow  escapes_reserved.cow.html  expression_splice.cow  expression_splice.cow.html  expression_splice_in_block.cow  expression_splice_in_block.cow.html  expression_splice_in_string.cow  expression_splice_in_string.cow.html  floats.cow  floats.cow.html  (+18 more)
test/highlight/cpp/: character_literals.cpp.html  co_yield.cpp  co_yield.cpp.html  comments.cpp.html  coroutines.cpp  coroutines.cpp.html  designated_initializers.cpp  designated_initializers.cpp.html  directives.cpp.html  hello_world.cpp  hello_world.cpp.html  integers.cpp.html  raw_strings.cpp.html  string_literals.cpp  string_literals.cpp.html  user_defined_literals.cpp  user_defined_literals.cpp.html  variable.cpp  variable.cpp.html
test/highlight/css/: calc_operator_minus.css  calc_operator_minus.css.html  dark_theme.css.html  important.css.html  media_query_selector.css  media_query_selector.css.html  nested_at_rules.css  nested_at_rules.css.html  rules.css  rules.css.html  units.css  units.css.html
test/highlight/diff/: binary_and_mode.diff  binary_and_mode.diff.html  context.diff  context.diff.html  git_header.diff  git_header.diff.html  unified.diff  unified.diff.html
test/highlight/ebnf/: cases.ebnf  cases.ebnf.html  digit_start.ebnf  digit_start.ebnf.html  ebnf.ebnf  ebnf.ebnf.html  inline_comments.ebnf  inline_comments.ebnf.html  special.ebnf  special.ebnf.html
test/highlight/html/: cdata.html.html  character_reference.html  character_reference.html.html  comments.html.html  conditional_comments.html  conditional_comments.html.html  doctype.html.html  doctype_case_insensitive.html  doctype_case_insensitive.html.html  less_than.html.html  (+7 more)
test/json/: nested.json  values.json
themes/: eelis.json  ulight.json  vs.json  vs_plus.json  wg21.json
www/: index.html  live_edit.html
www/css/: code.css  live_edit.css  main.css  theme.css
www/fonts/: fonts.css
www/js/: live_edit.js  live_edit_core.js  ulight.js
(+716 files in other folders)
